--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-        <script src="script.js"></script>
+    <div id="Clock"></div>
+    <script src="script.js"></script>
   </body>
 </html>
